--- a/myapp.ini.j2
+++ b/myapp.ini.j2
@@ -1,7 +1,7 @@
 [program:myapp]
 priority=10
 directory=/tmp/myapp
-command=python app.py
+command=python hello.py
 user=root
 autostart=true
 autorestart=true
